--- a/src/pages/SingleProduct.css
+++ b/src/pages/SingleProduct.css
@@ -7,13 +7,21 @@
     height: auto !important;
     display: inline-block;
     float: left;
-    border: 1px solid #505050;
+   border-color: darkgray;
+   border-radius: 8px;
+   box-shadow: 0px 0px 5px black;
     padding: 5px;
-    background-color: white;
+    background-color: transparent;
 }
 .lightbox-backdrop.hide-controls div{
     opacity: 1 !important;
     pointer-events: auto !important;
+}
+#productContainer{
+    height: 100vh;
+}
+#imgCol{
+    height: 70vh;
 }
 
 @media (min-width: 992px){
