--- a/src/pages/SingleProduct.css
+++ b/src/pages/SingleProduct.css
@@ -1,17 +1,32 @@
 .lightbox-container .lightbox-img-thumbnail:first-child{
-    width: 60% !important;
+    width: 80% !important;
+   
+    margin-right: 30px;
+}
+.lightbox-container .lightbox-img-thumbnail:last-child(){
+    width: 80% !important;
+    margin-left: 30px;
 }
 
 .lightbox-container .lightbox-img-thumbnail{
+    
+    margin: 24px;
     width: 17% !important;
     height: auto !important;
-    display: inline-block;
-    float: left;
-   border-color: darkgray;
-   border-radius: 8px;
-   box-shadow: 0px 0px 5px black;
-    padding: 5px;
-    background-color: transparent;
+  display: inline-block;
+
+  text-align: center;
+  color: #99aab5;
+  border-color: #1c2f36;
+  font-family: sans-serif;
+  transition: all 0.3s ease;
+  
+  margin-right: 14px;
+  border: double 3px transparent;
+  border-radius: 20px;
+  
+  background-origin: border-box;
+  background-clip: content-box, border-box;
 }
 .lightbox-backdrop.hide-controls div{
     opacity: 1 !important;
@@ -22,6 +37,17 @@
 }
 #imgCol{
     height: 70vh;
+}
+#addToCartBtn{
+    margin-left: 0px;
+    margin-top: 20px;
+    border: 2px solid oldlace;
+    background-color: orange;
+    color: white;
+    transition: all 0.3s ease;
+}
+#badge{
+   font-size: 15px;
 }
 
 @media (min-width: 992px){
